fixed resume techstack percentage bug 1/6/23

--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
                   </div>
                 </div>
               </div>
+
               <!-- Portfolio section-->
               <div class="portfolio-section single-section">
                 <div class="row">
@@ -396,14 +397,137 @@
                     </div>
                   </div>
                 </div>
+
+                <!-- skill 1 and 2 start -->
+
                 <div class="row">
                   <div id="skill1" class="col-12 col-md-6">
-                    <!-- now -->
+                    <div class="single-skill" data-percentage="95">
+                      <div class="skill-info">
+                        <span class="skill-name">HTML/CSS</span
+                        ><span
+                          class="skill-percentage"
+                          style="margin-right: 28.5px"
+                          >95%</span
+                        >
+                      </div>
+                      <div class="progress skill-progress">
+                        <div
+                          class="progress-bar"
+                          role="progressbar"
+                          aria-valuemin="0"
+                          aria-valuemax="100"
+                          aria-valuenow="95"
+                          style="width: 95%"
+                        ></div>
+                      </div>
+                    </div>
+                    <div class="single-skill" data-percentage="80">
+                      <div class="skill-info">
+                        <span class="skill-name">Web Design</span
+                        ><span
+                          class="skill-percentage"
+                          style="margin-right: 114px"
+                          >80%</span
+                        >
+                      </div>
+                      <div class="progress skill-progress">
+                        <div
+                          class="progress-bar"
+                          role="progressbar"
+                          aria-valuemin="0"
+                          aria-valuemax="100"
+                          aria-valuenow="80"
+                          style="width: 80%"
+                        ></div>
+                      </div>
+                    </div>
+                    <div class="single-skill" data-percentage="90">
+                      <div class="skill-info">
+                        <span class="skill-name">JavaScript</span
+                        ><span
+                          class="skill-percentage"
+                          style="margin-right: 57px"
+                          >90%</span
+                        >
+                      </div>
+                      <div class="progress skill-progress">
+                        <div
+                          class="progress-bar"
+                          role="progressbar"
+                          aria-valuemin="0"
+                          aria-valuemax="100"
+                          aria-valuenow="90"
+                          style="width: 90%"
+                        ></div>
+                      </div>
+                    </div>
                   </div>
                   <div id="skill2" class="col-12 col-md-6">
-                    <!-- now -->
+                    <div class="single-skill" data-percentage="90">
+                      <div class="skill-info">
+                        <span class="skill-name">React JS</span
+                        ><span
+                          class="skill-percentage"
+                          style="margin-right: 57px"
+                          >90%</span
+                        >
+                      </div>
+                      <div class="progress skill-progress">
+                        <div
+                          class="progress-bar"
+                          role="progressbar"
+                          aria-valuemin="0"
+                          aria-valuemax="100"
+                          aria-valuenow="90"
+                          style="width: 90%"
+                        ></div>
+                      </div>
+                    </div>
+                    <div class="single-skill" data-percentage="95">
+                      <div class="skill-info">
+                        <span class="skill-name">Express.js</span
+                        ><span
+                          class="skill-percentage"
+                          style="margin-right: 28.5px"
+                          >95%</span
+                        >
+                      </div>
+                      <div class="progress skill-progress">
+                        <div
+                          class="progress-bar"
+                          role="progressbar"
+                          aria-valuemin="0"
+                          aria-valuemax="100"
+                          aria-valuenow="95"
+                          style="width: 95%"
+                        ></div>
+                      </div>
+                    </div>
+                    <div class="single-skill" data-percentage="80">
+                      <div class="skill-info">
+                        <span class="skill-name">TypeScript</span
+                        ><span
+                          class="skill-percentage"
+                          style="margin-right: 114px"
+                          >80%</span
+                        >
+                      </div>
+                      <div class="progress skill-progress">
+                        <div
+                          class="progress-bar"
+                          role="progressbar"
+                          aria-valuemin="0"
+                          aria-valuemax="100"
+                          aria-valuenow="80"
+                          style="width: 80%"
+                        ></div>
+                      </div>
+                    </div>
                   </div>
                 </div>
+
+                <!-- skills 1 and 2 end -->
               </div>
               <!-- Video section
               <div class="video-section single-section">
@@ -687,6 +811,16 @@
         </div>
       </div>
     </div>
+
+    <!-- Icons -->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
     <!-- Scripts-->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
