--- a/index.html
+++ b/index.html
@@ -300,70 +300,20 @@
                   <!-- Education part-->
                   <div class="col-12 col-md-6">
                     <div class="col-block education">
-                      <h3 class="col-title">Education</h3>
-                      <div class="resume-item">
-                        <span class="item-arrow"></span>
-                        <h5 class="item-title">Computer Science</h5>
-                        <span class="item-details"
-                          >Cambridge University / 2004 - 2007</span
-                        >
-                        <p class="item-description">
-                          Lorem ipsum dolor sit amet, consectetur adipisicing
-                          elit. Optio quo repudiandae.
-                        </p>
-                      </div>
-                      <div class="resume-item">
-                        <span class="item-arrow"></span>
-                        <h5 class="item-title">Bachelor Degree</h5>
-                        <span class="item-details"
-                          >University of Tokyo / 2008 - 2010</span
-                        >
-                        <p class="item-description">
-                          Lorem ipsum dolor sit amet, consectetur adipisicing
-                          elit. Optio quo repudiandae.
-                        </p>
-                      </div>
-                      <div class="resume-item">
-                        <span class="item-arrow"></span>
-                        <h5 class="item-title">Master Degree</h5>
-                        <span class="item-details"
-                          >Harvard University / 2012 - 2015</span
-                        >
-                        <p class="item-description">
-                          Lorem ipsum dolor sit amet, consectetur adipisicing
-                          elit. Optio quo repudiandae.
-                        </p>
-                      </div>
+                      <h3 id="education-resume" class="col-title">Education</h3>
+                      <!-- foreach loop -->
                     </div>
                   </div>
                   <!-- Experience part-->
                   <div class="col-12 col-md-6">
                     <div class="col-block experience">
-                      <h3 class="col-title">Experience</h3>
+                      <h3 id="experience-resume" class="col-title">
+                        Experience
+                      </h3>
                       <div class="resume-item">
                         <span class="item-arrow"></span>
                         <h5 class="item-title">Software Engineer</h5>
                         <span class="item-details">Adobe / 2015 - 2017</span>
-                        <p class="item-description">
-                          Lorem ipsum dolor sit amet, consectetur adipisicing
-                          elit. Optio quo repudiandae.
-                        </p>
-                      </div>
-                      <div class="resume-item">
-                        <span class="item-arrow"></span>
-                        <h5 class="item-title">Back-End Developer</h5>
-                        <span class="item-details">Google / 2017 - 2018</span>
-                        <p class="item-description">
-                          Lorem ipsum dolor sit amet, consectetur adipisicing
-                          elit. Optio quo repudiandae.
-                        </p>
-                      </div>
-                      <div class="resume-item">
-                        <span class="item-arrow"></span>
-                        <h5 class="item-title">UI/UX Designer</h5>
-                        <span class="item-details"
-                          >Discord / 2019 - Present</span
-                        >
                         <p class="item-description">
                           Lorem ipsum dolor sit amet, consectetur adipisicing
                           elit. Optio quo repudiandae.
@@ -398,10 +348,9 @@
                   </div>
                 </div>
 
-                <!-- skill 1 and 2 start -->
-
                 <div class="row">
                   <div id="skill1" class="col-12 col-md-6">
+                    <!-- for loop  -->
                     <div class="single-skill" data-percentage="95">
                       <div class="skill-info">
                         <span class="skill-name">HTML/CSS</span
@@ -422,48 +371,9 @@
                         ></div>
                       </div>
                     </div>
-                    <div class="single-skill" data-percentage="80">
-                      <div class="skill-info">
-                        <span class="skill-name">Web Design</span
-                        ><span
-                          class="skill-percentage"
-                          style="margin-right: 114px"
-                          >80%</span
-                        >
-                      </div>
-                      <div class="progress skill-progress">
-                        <div
-                          class="progress-bar"
-                          role="progressbar"
-                          aria-valuemin="0"
-                          aria-valuemax="100"
-                          aria-valuenow="80"
-                          style="width: 80%"
-                        ></div>
-                      </div>
-                    </div>
-                    <div class="single-skill" data-percentage="90">
-                      <div class="skill-info">
-                        <span class="skill-name">JavaScript</span
-                        ><span
-                          class="skill-percentage"
-                          style="margin-right: 57px"
-                          >90%</span
-                        >
-                      </div>
-                      <div class="progress skill-progress">
-                        <div
-                          class="progress-bar"
-                          role="progressbar"
-                          aria-valuemin="0"
-                          aria-valuemax="100"
-                          aria-valuenow="90"
-                          style="width: 90%"
-                        ></div>
-                      </div>
-                    </div>
                   </div>
                   <div id="skill2" class="col-12 col-md-6">
+                    <!-- another for loop -->
                     <div class="single-skill" data-percentage="90">
                       <div class="skill-info">
                         <span class="skill-name">React JS</span
@@ -484,50 +394,8 @@
                         ></div>
                       </div>
                     </div>
-                    <div class="single-skill" data-percentage="95">
-                      <div class="skill-info">
-                        <span class="skill-name">Express.js</span
-                        ><span
-                          class="skill-percentage"
-                          style="margin-right: 28.5px"
-                          >95%</span
-                        >
-                      </div>
-                      <div class="progress skill-progress">
-                        <div
-                          class="progress-bar"
-                          role="progressbar"
-                          aria-valuemin="0"
-                          aria-valuemax="100"
-                          aria-valuenow="95"
-                          style="width: 95%"
-                        ></div>
-                      </div>
-                    </div>
-                    <div class="single-skill" data-percentage="80">
-                      <div class="skill-info">
-                        <span class="skill-name">TypeScript</span
-                        ><span
-                          class="skill-percentage"
-                          style="margin-right: 114px"
-                          >80%</span
-                        >
-                      </div>
-                      <div class="progress skill-progress">
-                        <div
-                          class="progress-bar"
-                          role="progressbar"
-                          aria-valuemin="0"
-                          aria-valuemax="100"
-                          aria-valuenow="80"
-                          style="width: 80%"
-                        ></div>
-                      </div>
-                    </div>
                   </div>
                 </div>
-
-                <!-- skills 1 and 2 end -->
               </div>
               <!-- Video section
               <div class="video-section single-section">
