resume section: added exp and edu

--- a/index.html
+++ b/index.html
@@ -310,15 +310,7 @@
                       <h3 id="experience-resume" class="col-title">
                         Experience
                       </h3>
-                      <div class="resume-item">
-                        <span class="item-arrow"></span>
-                        <h5 class="item-title">Software Engineer</h5>
-                        <span class="item-details">Adobe / 2015 - 2017</span>
-                        <p class="item-description">
-                          Lorem ipsum dolor sit amet, consectetur adipisicing
-                          elit. Optio quo repudiandae.
-                        </p>
-                      </div>
+                      <!-- for loop -->
                     </div>
                   </div>
                 </div>
