Added: Seo Data

--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     <!-- Title-->
     <title>IshaanChawla.info</title>
     <!-- Description-->
-    <meta name="description" content="Personal Portfolio Template" />
+    <meta
+      name="description"
+      content="Ishaan Chawla's portfolio website as ishaanchawla.info. Journey of a Software Development Engineer"
+    />
+    <meta
+      name="keywords"
+      content="Software Engineer, Software Development Enigneer, SDE, Software Developer, HTML, HTML5, CSS, CSS3, JS, JavaScript, ES6, ES, EcmaScript, React, React.js, Web Developer, Web Development, Frontend Developer, Frontend Development, Frontend Enigneer"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="author" content="Ishaan Chawla" />
     <!-- Favicons-->
     <link
       rel="apple-touch-icon"
+      type="image/png"
       sizes="180x180"
       href="img/favicons/apple.png"
     />
@@ -67,7 +76,12 @@
     <div id="overlay-effect"></div>
     <!-- Navbar-->
     <nav class="navbar-expand-md navbar fixed-top" id="navbar">
-      <a class="navbar-brand" data-scroll="" href="index.html">
+      <a
+        class="navbar-brand"
+        data-scroll=""
+        title="ishaanchawla.info"
+        href="index.html"
+      >
         <!-- Navbar Logo-->
         <h4>Ishaan Chawla</h4></a
       >
@@ -87,16 +101,20 @@
       >
         <!-- Navbar menu-->
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item">
-            <a class="nav-link" href="#resume">Resume</a>
+            <a class="nav-link" title="about" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" title="resume" href="#resume">Resume</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link" href="#portfolio">Portfolio</a>
           </li> -->
-          <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link" title="blog" href="#blog">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" title="contact" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -137,11 +155,15 @@
               <a
                 href="https://www.linkedin.com/in/ishaan-chawla-0001/"
                 target="_blank"
+                title="My Linkedin"
                 ><i class="icon ion-logo-linkedin"></i
               ></a>
             </li>
             <li>
-              <a href="https://github.com/IshaanChawla0001" target="_blank"
+              <a
+                href="https://github.com/IshaanChawla0001"
+                target="_blank"
+                title="My Github"
                 ><i class="icon ion-logo-github"></i
               ></a>
             </li>
@@ -177,7 +199,7 @@
                     <img
                       class="img-fluid img-thumbnail"
                       src="img/ishaanHi.png"
-                      alt="About Picture"
+                      alt="Ishaan's Memoji Saying Hi!"
                     />
                   </div>
                   <!-- Content part-->
@@ -207,6 +229,7 @@
                             <p>
                               <a
                                 id="about-email"
+                                title="Send me an Email"
                                 href="mailto:ishaanchawla35@gmail.com"
                               ></a>
                             </p>
@@ -236,6 +259,7 @@
                             <a
                               href="https://www.linkedin.com/in/ishaan-chawla-0001/"
                               target="_blank"
+                              title="My Linkedin"
                               ><i class="icon ion-logo-linkedin"></i
                             ></a>
                           </li>
@@ -243,6 +267,7 @@
                             <a
                               href="https://github.com/IshaanChawla0001"
                               target="_blank"
+                              title="My Githbub"
                               ><i class="icon ion-logo-github"></i
                             ></a>
                           </li>
@@ -322,6 +347,7 @@
                   class="btn content-download button-main button-scheme"
                   href="Ishaan_Chawla_SDE_Resume.pdf"
                   target="blank"
+                  title="Download my resume"
                   role="button"
                   >Download CV</a
                 >
