--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       name="keywords"
-      content="Software Engineer, Software Development Enigneer, SDE, Software Developer, HTML, HTML5, CSS, CSS3, JS, JavaScript, ES6, ES, EcmaScript, React, React.js, Web Developer, Web Development, Frontend Developer, Frontend Development, Frontend Enigneer"
+      content="ishaanchawla.info, ishaanchawla0001.github.io, Software Engineer, Software Development Enigneer, SDE, Software Developer, HTML, HTML5, CSS, CSS3, JS, JavaScript, ES6, ES, EcmaScript, React, React.js, Web Developer, Web Development, Frontend Developer, Frontend Development, Frontend Enigneer"
     />
     <meta
       name="viewport"
