--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
           <li class="nav-item">
             <a class="nav-link" title="resume" href="#resume">Resume</a>
           </li>
-          <li class="nav-item">
+<!--           <li class="nav-item">
             <a class="nav-link" href="#portfolio">Portfolio</a>
-          </li> 
+          </li>  -->
          <li class="nav-item">
             <a class="nav-link" title="blog" href="#blog">Blog</a>
           </li> 
